--- a/index.html
+++ b/index.html
@@ -5,9 +5,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>RollCalculator</title>
+    <title>MobCombat Helper</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <link href="./Styles/style.css" rel="stylesheet">
+    <link rel="icon" href="https://i.pinimg.com/736x/16/9c/a3/169ca37e784312385a142eda23ffe238.jpg">
 </head>
 
 <body id='body' style="background-color:grey;">
