--- a/index.html
+++ b/index.html
@@ -6,76 +6,109 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>RollCalculator</title>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
+        integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+    <link href="https://fonts.googleapis.com/css2?family=Varela+Round&display=swap" rel="stylesheet">
     <link href="./Styles/style.css" rel="stylesheet">
 </head>
 
 <body id='body' style="background-color:grey;">
 
-<div class="mainContainer shadow">
+    <div class="mainContainer shadow">
 
-    <div id="alertError">
+        <div id="alertError">
+        </div>
+
+        <span class="saveButtons">
+            <button class="btn btn-danger mr-1" id='saveBtn' onclick="save()">Save</button>
+            <button class="btn btn-warning" id='loadBtn' onclick="load()">Load</button>
+        </span>
+        <div class="container-fluid characterCard d-flex flex-row align-items-center">
+            <div class="row " id="AddCharCard">
+                <div class="col-12 mt-1">
+                    <div class="card mt-0">
+                        <div class="card-horizontal align-items-center">
+                            <div class="card-body pt-0 pb-0">
+
+                                <span class="card-title">Name </span><input type="text" class=""
+                                    oninput="updateButtonStyle('#addCharBtn',true)" placeholder="Name of Character"
+                                    id="inputCharName" maxlength="20">
+                                <span class="card-title">CA </span><input type="number" class="numberCard"
+                                    oninput="updateButtonStyle('#addCharBtn',true)" placeholder="(max: 99)"
+                                    id="inputCharCA" max="99" min="0">
+                                <span class="card-title">Title </span><input type="text" class=""
+                                    oninput="updateButtonStyle('#addCharBtn',true)" placeholder="(optional)"
+                                    id="inputCharTitle" maxlength="30">
+                                <span class="card-title">Picture(URL) </span><input type="text" class=""
+                                    oninput="updateButtonStyle('#addCharBtn',true)" placeholder="(optional)"
+                                    id="inputCharPic">
+
+                            </div>
+                            <button type="button" class="btn btn-danger mr-3 ml-2" id="addCharBtn"
+                                onclick="addInputChar(this)">Add Character</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <button class="btn btn-muted mt-1 ml-3" data-toggle="collapse" data-target="#AddAttackCard">Change
+                attacks</button>
+        </div>
+        <div class="container-fluid characterCard ml-0 d-flex flex-row align-items-center">
+            <div class="row collapse" id="AddAttackCard">
+                <!-- script fills this section -->
+            </div>
+
+        </div>
     </div>
 
-    <span class="saveButtons"> 
-        <button class="btn btn-danger mr-1" id='saveBtn' onclick="save()">Save</button>
-        <button class="btn btn-warning" id='loadBtn' onclick="load()">Load</button>
-    </span>
-    <div class="container-fluid characterCard d-flex flex-row align-items-center">
-        <div class="row " id="AddCharCard">
-            <div class="col-12 mt-1">
-                <div class="card mt-0">
-                    <div class="card-horizontal align-items-center">
-                        <div class="card-body pt-0 pb-0">
+    </div>
+    </div>
 
-                            <span class="card-title">Name </span><input type="text" class="" oninput="updateButtonStyle('#addCharBtn',true)" placeholder="Name of Character" id="inputCharName" maxlength = "20">
-                            <span class="card-title">CA </span><input type="number" class="numberCard" oninput="updateButtonStyle('#addCharBtn',true)" placeholder="(max: 99)" id="inputCharCA" max="99" min="0">
-                            <span class="card-title">Title </span><input type="text" class="" oninput="updateButtonStyle('#addCharBtn',true)" placeholder="(optional)" id="inputCharTitle" maxlength = "30">
-                            <span class="card-title">Picture(URL) </span><input type="text" class="" oninput="updateButtonStyle('#addCharBtn',true)"  placeholder="(optional)" id="inputCharPic">
+    <div class="logBtn d-flex justify-content-left">
+        <button class='btn btn-info ' data-toggle='collapse' data-target="#logs" onclick="changeLogBtn()" id="showLogsBtn">LOGS</button>
 
-                        </div>                
-                        <button type="button" class="btn btn-danger mr-3 ml-2" id="addCharBtn" onclick="addInputChar(this)">Add Character</button>
-                    </div> 
-                </div>  
+        <div class="collapse " id="logs">
+            <div class="log shadow">
+                <div class="container containerLogs p-0">
+                    <ul class='list-group' id='logList'>
+                        <li class="list-group-item list-group-item-action list-group-item-secondary logitem">This is the log window</li>
+                        <li class="list-group-item list-group-item-action list-group-item-secondary logitem">Every roll will be recorded here</li>
+
+                    </ul>
+                </div>
             </div>
-        </div> 
-            <button class="btn btn-muted mt-1 ml-3" data-toggle="collapse" data-target="#AddAttackCard" >Change attacks</button>
-    </div>  
+        </div>
+    </div>
 
-<div class="container-fluid characterCard ml-0 d-flex flex-row align-items-center">
-    <div class="row collapse" id="AddAttackCard">
+    <br>
+
+    <div id="CharactersSection">
         <!-- script fills this section -->
     </div>
-    
-    </div>
-</div>
 
-</div>
-<br>
 
-<div id="CharactersSection">
-    <!-- script fills this section -->
-</div>
 
-<!-- Modal -->
-<div class="modal fade" id="changeStatsModal" tabindex="-1" role="dialog">
-    <div class="modal-dialog modal-dialog-centered" role="document">
-      <div class="modal-content">
-        <div class="modal-header">
-          <h5 class="modal-title" id="modalTitle">[[Character Name]]</h5>
-          <button type="button" class="close" aria-label="Close" data-dismiss="modal">
-            <span aria-hidden="true">&times;</span>
-          </button>
+
+    <!-- Modal -->
+    <div class="modal fade" id="changeStatsModal" tabindex="-1" role="dialog">
+        <div class="modal-dialog modal-dialog-centered" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="modalTitle">[[Character Name]]</h5>
+                    <button type="button" class="close" aria-label="Close" data-dismiss="modal">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+                <div class="modal-body" id="modalBody">
+                    [[fail to load]]
+                </div>
+            </div>
         </div>
-        <div class="modal-body" id="modalBody">
-           [[fail to load]]
-      </div>
     </div>
-  </div>
-</div>
-<!---->
-<img id='btnReset' class="btn-light" onclick="Reload()" title="Reset" src="./Public/assets/round_settings_backup_restore_black_18dp.png">
-<!------------------------------------------------------->
+    <!---->
+    <img id='btnReset' class="btn-light" onclick="Reload()" title="Reset"
+        src="./Public/assets/round_settings_backup_restore_black_18dp.png">
+    <!------------------------------------------------------->
     <!--Jquery-->
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
         integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
@@ -93,6 +126,7 @@
     <script src="./Public/userInputs.js"></script>
     <script src="./Public/generateIndex.js"></script>
     <script src="./Public/script.js"></script>
+    <script src="./Public/logs.js"></script>
 </body>
 
 
