--- a/index.html
+++ b/index.html
@@ -36,10 +36,10 @@
                                 <span class="card-title">CA </span><input type="number" class="numberCard"
                                     oninput="updateButtonStyle('#addCharBtn',true)" placeholder="(max: 99)"
                                     id="inputCharCA" max="99" min="0">
-                                <span class="card-title">Title </span><input type="text" class=""
+                                <span class="card-title">Title </span><input type="text" class="inputAdjust"
                                     oninput="updateButtonStyle('#addCharBtn',true)" placeholder="(optional)"
                                     id="inputCharTitle" maxlength="30">
-                                <span class="card-title">Picture(URL) </span><input type="text" class=""
+                                <span class="card-title">Picture(URL) </span><input type="text" class="inputAdjust"
                                     oninput="updateButtonStyle('#addCharBtn',true)" placeholder="(optional)"
                                     id="inputCharPic">
 
